@@ -1,4 +1,4 @@
-#### 测试环境：Tomcat8，以下的变量定义添加在catalina.sh的96行之下（具体百度）
+#### 测试环境：Tomcat8 以下变量定义添加在 catalina.sh 的96行之下
 ```
 # 变量说明：
 # $JAVA_OPTS：     仅对启动运行Tomcat实例的Java虚拟机有效
@@ -38,3 +38,28 @@ $JAVA_OPTS
 ```
 
 ![JVM](资料/JVM.png)
+#### Demo
+```txt
+set CATALINA_OPTS="
+-server 
+-Xms6000M 
+-Xmx6000M 
+-Xss512k 
+-XX:NewSize=2250M 
+-XX:MaxNewSize=2250M 
+-XX:PermSize=128M
+-XX:MaxPermSize=256M  
+-XX:+AggressiveOpts 
+-XX:+UseBiasedLocking 
+-XX:+DisableExplicitGC 
+-XX:+UseParNewGC 
+-XX:+UseConcMarkSweepGC 
+-XX:MaxTenuringThreshold=31 
+-XX:+CMSParallelRemarkEnabled 
+-XX:+UseCMSCompactAtFullCollection 
+-XX:LargePageSizeInBytes=128m 
+-XX:+UseFastAccessorMethods 
+-XX:+UseCMSInitiatingOccupancyOnly
+-Duser.timezone=Asia/Shanghai 
+-Djava.awt.headless=true"
+```
